--- a/angular-blog/package.json
+++ b/angular-blog/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~13.0.0",
     "@angular/platform-browser-dynamic": "~13.0.0",
     "@angular/router": "~13.0.0",
+    "@angular/service-worker": "~13.0.0",
     "ngx-pagination": "^5.1.1",
     "ngx-quill": "^16.1.1",
     "rxjs": "~7.4.0",
